--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,10 +79,10 @@ body{
 }
 
 .hero__overlay {
-    font-size: 3rem;
+    font-size: 7rem;
     position: absolute;
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-family: var(--Font-header);
@@ -91,6 +91,7 @@ body{
 
 .hero__overlay p{
     text-align: center;
+    color: whitesmoke
 }
 
 .small__subheader{
