--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,7 +38,7 @@ body{
 .Navigation__Menu{
     /* background-color: lightblue; */
     padding: 10px;
-    font-size: 1.25rem;
+    font-size: 1rem;
 }
 
 .Navigation__Menu ul{
@@ -64,7 +64,13 @@ body{
 }
 
 .Navigation__Menu li:hover{
-    letter-spacing: 3px;
+    letter-spacing: 1.5px;
+    
+}
+
+.Navigation__Menu a:hover{
+    font-weight: 700;
+    text-decoration: underline;
 }
 
 .hero__section{
@@ -100,10 +106,11 @@ body{
 
 
 
-
-
-
-
-
-
 /*//////////////////////////////// MAIN SECTION ////////////////////////////////*/
+
+.blockQuote__1{
+    text-align: center;
+    padding: 5px;
+    font-size: 2.2rem;
+    margin-top: 10px;
+}
