--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,6 +26,12 @@ body{
     font-family: var(--Font-body);
 }
 
+.wrapper{
+    min-width: 1000px;
+    margin: 0 auto;
+    /* padding: 10px; */
+}
+
 /*//////////////////////////////// HEADER SECTION ////////////////////////////////*/
 
 .logo{
@@ -79,7 +85,7 @@ body{
 
 .hero__section img{
    min-height: 500px;
-   max-height: 850px;
+   max-height: 1000px;
    object-fit: cover;
    align-content: center;
 }
@@ -109,8 +115,28 @@ body{
 /*//////////////////////////////// MAIN SECTION ////////////////////////////////*/
 
 .blockQuote__1{
+    display: flex;
     text-align: center;
     padding: 5px;
-    font-size: 2.2rem;
-    margin-top: 10px;
+    font-size: 2.25rem;
+    margin: 30px;
+    /* border: 1px solid firebrick; */
+    align-items: center;
+    justify-content: center;
+    
+}
+
+/* Main Content section 1  */
+
+.mainContent__section1{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 1em;
+}
+
+.mainContent__section1__description{
+    display: grid;
+    place-content: center;
+    text-align: center;
+    gap: .25rem;
 }
