--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,7 +27,7 @@ body{
 }
 
 .wrapper{
-    min-width: 1000px;
+    max-width: 1000px;
     margin: 0 auto;
     /* padding: 10px; */
 }
@@ -131,7 +131,7 @@ body{
 .mainContent__section1{
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    gap: 1em;
+    /* gap: 1em; */
 }
 
 .mainContent__section1__description{
@@ -139,4 +139,28 @@ body{
     place-content: center;
     text-align: center;
     gap: .25rem;
+    /* width: 45ch; */
+}
+
+.mainContent__section1__description p{
+    width: 45ch;
+}
+
+/* mainContent section2 */
+.mainContent__section2{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    /* gap: 1em; */
+}
+
+.mainContent__section2__description{
+    display: grid;
+    place-content: center;
+    text-align: center;
+    gap: .25rem;
+    /* width: 45ch; */
+}
+
+.mainContent__section2__description p{
+    width: 45ch;
 }
