--- a/styles/styles.css
+++ b/styles/styles.css
@@ -123,6 +123,7 @@ body{
     /* border: 1px solid firebrick; */
     align-items: center;
     justify-content: center;
+    width: 45ch
     
 }
 
@@ -149,6 +150,12 @@ body{
     color: whitesmoke;
 }
 
+.contact__btn:active{
+    background-color: rgb(170, 218, 103);
+    color: rgb(254, 253, 253);
+    border: none;
+}
+
 .mainContent__section1{
     display: grid;
     grid-template-columns: repeat(2,1fr);
@@ -161,6 +168,7 @@ body{
     text-align: center;
     gap: .25rem;
     /* width: 45ch; */
+    
 }
 
 .mainContent__section1__description p{
@@ -204,4 +212,42 @@ body{
 
 .mainContent__section3__description p{
     width: 45ch;
+}
+
+/*//////////////////////////////// FOOTER SECTION ////////////////////////////////*/
+
+footer{
+    background-color: rgb(255, 225, 127);
+}
+
+.footer__wrapper{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    /* border: 1px solid; */
+    min-height: 300px;
+    place-content: center;
+}
+
+.footer__links__wrapper{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 0 auto;
+    gap: 5rem;
+}
+
+
+.list__items a{
+    text-decoration: none;
+    line-height: 2;
+    font-weight: 200;
+}
+
+.list__items{
+    list-style: none;
+}
+
+.footer__links h3{
+    margin-bottom: 10px;
+    font-size: 1.35rem;
+    font-weight: 300;
 }
