Added a aspect reation 1/1 to the content images

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -215,6 +215,11 @@ body{
     width: 45ch;
 }
 
+.content_image{
+    aspect-ratio: 1/1;
+    object-fit: cover;
+}
+
 /*//////////////////////////////// FOOTER SECTION ////////////////////////////////*/
 
 footer{
