--- a/styles/styles.css
+++ b/styles/styles.css
@@ -199,7 +199,7 @@ footer{
     grid-template-columns: repeat(2, 1fr);
     margin: 0 auto;
     gap: 3rem;
-    /* border: 1px solid firebrick; */
+    border: 1px solid transparent;
     padding: 20px;
 }
 
