--- a/styles/styles.css
+++ b/styles/styles.css
@@ -180,6 +180,23 @@ body{
     width: 45ch;
 }
 
+/*//////////////////////////////// Review Card SECTION ////////////////////////////////*/
+.cards__section{
+    margin: 10px;
+    padding: 5px;
+}
+
+
+.profile__img{
+    height: 75px;
+    width: 75px;
+    display: cover;
+    border-radius: 500px;
+    outline: 1px solid;
+    outline-offset: 3px;
+}
+
+
 /*//////////////////////////////// FOOTER SECTION ////////////////////////////////*/
 
 footer{
