--- a/styles/styles.css
+++ b/styles/styles.css
@@ -181,6 +181,12 @@ body{
 }
 
 /*//////////////////////////////// Review Card SECTION ////////////////////////////////*/
+.review__title{
+    text-align: center;
+    margin-top: 10px;
+    font-size: 2.5rem;
+}
+
 .cards__section{
     margin: 10px;
     padding: 5px;
