--- a/styles/styles.css
+++ b/styles/styles.css
@@ -202,15 +202,33 @@ body{
     outline-offset: 3px;
 }
 
-.review__card{
+.card__upper{
     display: flex;
     gap: 1.25rem;
 }
+
+.review__card{
+    padding: 15px;
+    border: 1px solid hsl(0, 1%, 35%);
+    max-width: 300px;
+    min-height: 500px;
+    border-radius: 15px;
+}
+
 .customer{
     font-size: 1.25rem;
 }
 .city{
     font-size: .85rem;
+}
+
+.stars__section{
+    display: flex;;
+}
+
+.stars__icon{
+    height: 20px;
+    width: 20px
 }
 
 
