--- a/styles/styles.css
+++ b/styles/styles.css
@@ -209,12 +209,26 @@ body{
     gap: 1.25rem;
 }
 
+.card__body{
+    margin-top: 15px;
+    padding: 5px;
+    
+}
+
+.card__body h3{
+    font-size: 1.15rem;
+}
+
+.card__body p{
+    margin-top: 10px;
+    font-weight: 200;
+}
 .review__card{
     padding: 15px;
     outline: 1px dashed hsl(0, 0%, 0%);
     outline-offset: 3px;
     max-width: 300px;
-    min-height: 500px;
+    min-height: 400px;
     border-radius: 15px;
     background-color: #9b9696;
     color: white;
