made changes to the card review.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -223,6 +223,12 @@ body{
     margin-top: 10px;
     font-weight: 200;
 }
+
+.date{
+    margin-top: 10px;
+    font-size: .85rem;
+    padding: 5px;
+}
 .review__card{
     padding: 15px;
     outline: 1px dashed hsl(0, 0%, 0%);
