--- a/styles/styles.css
+++ b/styles/styles.css
@@ -240,6 +240,13 @@ body{
     color: white;
 }
 
+.reviews__section{
+    display: flex;
+    gap: 1rem;
+    margin: 10px;
+    padding: 5px;
+}
+
 .customer{
     font-size: 1.25rem;
 }
