--- a/styles/styles.css
+++ b/styles/styles.css
@@ -198,7 +198,7 @@ body{
 .profile__img{
     height: 75px;
     width: 75px;
-    display: cover;
+    object-fit: cover;
     border-radius: 500px;
     outline: 1px solid;
     outline-offset: 3px;
@@ -229,6 +229,7 @@ body{
     font-size: .85rem;
     padding: 5px;
 }
+
 .review__card{
     padding: 15px;
     outline: 1px dashed hsl(0, 0%, 0%);
