--- a/styles/styles.css
+++ b/styles/styles.css
@@ -184,9 +184,13 @@ body{
 
 
 .review__title{
+    display: grid;
+    place-content: center;
     text-align: center;
-    margin-top: 10px;
+    min-height: 100px;
     font-size: 2.5rem;
+    padding: 10px;
+    margin: 10px;
 }
 
 .cards__section{
@@ -244,9 +248,10 @@ body{
 .reviews__section{
     display: flex;
     gap: 1rem;
-    margin: 10px;
-    padding: 5px;
+    margin: 20px 0px;
+    padding: 10px;
 }
+
 
 .customer{
     font-size: 1.25rem;
