--- a/styles/styles.css
+++ b/styles/styles.css
@@ -246,7 +246,8 @@ body{
 }
 
 .reviews__section{
-    display: flex;
+    display: grid;
+    grid-auto-flow: column;
     gap: 1rem;
     margin: 20px 0px;
     padding: 10px;
