--- a/styles/styles.css
+++ b/styles/styles.css
@@ -248,9 +248,12 @@ body{
 .reviews__section{
     display: grid;
     grid-auto-flow: column;
-    gap: 1rem;
+    grid-auto-columns: 35%;
     margin: 20px 0px;
     padding: 10px;
+    overflow-x: auto;
+    overscroll-behavior-inline: contain;
+    /* border: 1px solid red; */
 }
 
 
