working on responsive and mobile versions of the site.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -362,3 +362,12 @@ hr{
     border-top: 1.25px solid;
 
 }
+
+
+/* @media(max-width: 768px ){
+    .mainContent__section{
+        
+        display: grid;
+
+    }
+} */
