--- a/styles/joinOurTeam.css
+++ b/styles/joinOurTeam.css
@@ -3,3 +3,14 @@ body{
     display: grid;
     place-content: center;
 }
+
+main{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+
+img{
+    display: block;
+    width: 100%;
+}
+
