making a log in page.

--- a/styles/joinOurTeam.css
+++ b/styles/joinOurTeam.css
@@ -9,21 +9,14 @@
     box-sizing: border-box;
 }
 
-button,
+/* button,
 fieldset,
 input,
 legend,
 select,
 textarea{
-    /* -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box; */
-}
+
+} */
 
 body{
     min-height: 100vh;
@@ -33,10 +26,8 @@ body{
 }
 
 main{
-    border: 1px solid red;
     min-width: 700px;
     padding: 30px;
-
     background: rgba(255, 255, 255, 0.27);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -65,4 +56,5 @@ img{
 }
 
 .inputFields{
-   
+    
+}
