--- a/styles/joinOurTeam.css
+++ b/styles/joinOurTeam.css
@@ -1,3 +1,8 @@
+:root{
+    --Font-body:'Nunito Sans', sans-serif;
+    --Font-header:'Roboto', sans-serif;
+}
+
 *,
 *::after,
 *::before{
@@ -23,6 +28,7 @@ body{
     display: grid;
     place-content: center;
     background-image: url("https://images.unsplash.com/photo-1475483768296-6163e08872a1?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    font-family: var(--Font-body);
 }
 
 main{
@@ -51,10 +57,11 @@ img{
 }
 
 .login__wrapper h2{
+    font-family: var(--Font-header);
     margin-bottom: 10px;
     font-size: 3rem;
 }
 
 .inputFields{
-    
+
 }
