--- a/styles/joinOurTeam.css
+++ b/styles/joinOurTeam.css
@@ -8,11 +8,10 @@
 *::before{
     margin: 0;
     padding: 0;
-}
-
-*{
     box-sizing: border-box;
 }
+
+
 
 /* button,
 fieldset,
@@ -29,10 +28,11 @@ body{
     place-content: center;
     background-image: url("https://images.unsplash.com/photo-1475483768296-6163e08872a1?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     font-family: var(--Font-body);
+    color: #fff;
 }
 
 main{
-    min-width: 700px;
+    min-width: 500px;
     padding: 30px;
     background: rgba(255, 255, 255, 0.27);
     border-radius: 16px;
@@ -63,5 +63,36 @@ img{
 }
 
 .inputFields{
+    border-radius: 10px;
+    text-align: center;
+    background-color: transparent;
+}
 
+.inputFields:focus{
+    
+}
+
+.login__btn{
+    margin: 0 auto;
+    text-align: center;
+    width: 250px;
+    border-radius: 10px;
+    padding: 3px;
+    border: 3px double;
+    background-color: transparent;
+    transition: .3s ease-in-out;
+    color: #fff;
+}
+
+.login__btn:hover{
+    background-color: #fff;
+    border: none;
+    color: black;
+    font-weight: 300;
+    letter-spacing: 1px;
+}
+
+.login__btn:active{
+    background-color: rgb(83, 108, 147);
+    color: #fff;
 }
