--- a/styles/joinOurTeam.css
+++ b/styles/joinOurTeam.css
@@ -66,11 +66,17 @@ img{
     border-radius: 10px;
     text-align: center;
     background-color: transparent;
+    margin-left: 10px;
 }
 
-.inputFields:focus{
-    
+.inputFields::placeholder{
+    color: #fff;
 }
+
+input:focus{
+    color: whitesmoke;
+}
+
 
 .login__btn{
     margin: 0 auto;
