making a log in page.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -150,6 +150,11 @@ body{
     
 }
 
+.contact__btn a{
+    text-decoration: none;
+    color: inherit;
+}
+
 .contact__btn:hover{
     width: 10em;
     letter-spacing: 3px;
