--- a/styles/signUp.css
+++ b/styles/signUp.css
@@ -148,3 +148,7 @@ body{
     background-color: #f19437;
     transform: translateY(-2px);
   }
+
+  main{
+    background-image: url("https://images.unsplash.com/photo-1696757020926-d627b01c41cc?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDMyfGlVSXNuVnRqQjBZfHxlbnwwfHx8fHw%3D");
+  }
